--- a/equipos-frontend/src/app/app.component.html
+++ b/equipos-frontend/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-equipos></app-equipos>
+<h1>Hola mundo</h1>
+<div>
+  <button type="button" routerLink="/equipos" routerLinkActive="active">
+    Lista de Equipos
+  </button>
+  <button type="button" routerLink="/equipos/create" routerLinkActive="active">
+    Crear Equipo
+  </button>
+</div>
+<hr>
+<router-outlet></router-outlet>
