--- a/equipos-frontend/src/app/components/equipos/equipos.component.html
+++ b/equipos-frontend/src/app/components/equipos/equipos.component.html
@@ -1,15 +1,27 @@
-<h2>Lista de Equipos</h2>
-<ul>
-  <li *ngFor="let equipo of equipos">
-    {{ equipo.nombre }} - {{ equipo.ciudad }}
-    <button type="button" [routerLink]="['/equipos/view', equipo.id]">
-      Ver
-    </button>
-    <button type="button" [routerLink]="['/equipos/edit', equipo.id]">
-      Editar
-    </button>
-    <button type="button" [routerLink]="['/equipos/delete', equipo.id]">
-      Eliminar
-    </button>
-  </li>
-</ul>
+<div class="container mt-4">
+  <h2 class="mb-4">Lista de Equipos</h2>
+  <div class="row">
+    <div *ngFor="let equipo of equipos" class="col-md-6 col-lg-4 mb-3">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-text">
+            <strong>Nombre:</strong> {{ equipo.nombre }}</h5>
+          <p class="card-title">
+            <strong>Ciudad:</strong> {{ equipo.ciudad }}
+          </p>
+          <div class="mt-auto">
+            <button type="button" class="btn btn-sm btn-primary me-2" [routerLink]="['/equipos/view', equipo.id]">
+              Ver
+            </button>
+            <button type="button" class="btn btn-sm btn-warning me-2" [routerLink]="['/equipos/edit', equipo.id]">
+              Editar
+            </button>
+            <button type="button" class="btn btn-sm btn-danger" [routerLink]="['/equipos/delete', equipo.id]">
+              Eliminar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
