Cambios en el Front

--- a/equipos-frontend/src/app/app.component.html
+++ b/equipos-frontend/src/app/app.component.html
@@ -1,11 +1,7 @@
-<h1>Hola mundo</h1>
-<div>
-  <button type="button" routerLink="/equipos" routerLinkActive="active">
-    Lista de Equipos
-  </button>
-  <button type="button" routerLink="/equipos/create" routerLinkActive="active">
-    Crear Equipo
-  </button>
-</div>
+<section class="section">
+  <div class="container">
+    <h1 class="title">Bienvenido a MiTeam</h1>
+  </div>
+</section>
 <hr>
 <router-outlet></router-outlet>
