--- a/equipos-frontend/src/app/components/equipos-create/equipos-create.component.html
+++ b/equipos-frontend/src/app/components/equipos-create/equipos-create.component.html
@@ -1,16 +1,30 @@
-<h2>Crear Equipo</h2>
+<h2 class="title is-4">Crear Equipo</h2>
 <form [formGroup]="equipoForm" (ngSubmit)="onSubmit()">
-  <label for="nombre">Nombre:</label>
-  <input id="nombre" formControlName="nombre" type="text">
-  <div *ngIf="equipoForm.controls['nombre'].invalid && equipoForm.controls['nombre'].touched">
-    El nombre es obligatorio.
+  <div class="field">
+    <label class="label" for="nombre">Nombre:</label>
+    <div class="control">
+      <input class="input" id="nombre" formControlName="nombre" type="text">
+    </div>
+    <p class="help is-danger" *ngIf="equipoForm.controls['nombre'].invalid && equipoForm.controls['nombre'].touched">
+      El nombre es obligatorio.
+    </p>
   </div>
-  
-  <label for="ciudad">Ciudad:</label>
-  <input id="ciudad" formControlName="ciudad" type="text">
-  <div *ngIf="equipoForm.controls['ciudad'].invalid && equipoForm.controls['ciudad'].touched">
-    La ciudad es obligatoria.
+
+  <div class="field">
+    <label class="label" for="ciudad">Ciudad:</label>
+    <div class="control">
+      <input class="input" id="ciudad" formControlName="ciudad" type="text">
+    </div>
+    <p class="help is-danger" *ngIf="equipoForm.controls['ciudad'].invalid && equipoForm.controls['ciudad'].touched">
+      La ciudad es obligatoria.
+    </p>
   </div>
-  
-  <button type="submit" [disabled]="equipoForm.invalid">Crear Equipo</button>
+
+  <div class="field">
+    <div class="control">
+      <button type="submit" class="button is-primary" [disabled]="equipoForm.invalid">
+        Crear Equipo
+      </button>
+    </div>
+  </div>
 </form>
