--- a/equipos-frontend/src/app/components/jugadores-create/jugadores-create.component.html
+++ b/equipos-frontend/src/app/components/jugadores-create/jugadores-create.component.html
@@ -1,22 +1,33 @@
-<div class="container mt-4">
-    <h2>Crear Jugador</h2>
-    <form [formGroup]="jugadorForm" (ngSubmit)="onSubmit()">
-      <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre:</label>
-        <input id="nombre" formControlName="nombre" type="text" class="form-control">
-        <div *ngIf="jugadorForm.controls['nombre'].invalid && jugadorForm.controls['nombre'].touched" class="text-danger">
-          El nombre es obligatorio.
-        </div>
+<div class="container" style="margin-top: 1.5rem;">
+  <h2 class="title is-4">Crear Jugador</h2>
+  <form [formGroup]="jugadorForm" (ngSubmit)="onSubmit()">
+    <div class="field">
+      <label for="nombre" class="label">Nombre:</label>
+      <div class="control">
+        <input class="input" id="nombre" formControlName="nombre" type="text" placeholder="Ingresa el nombre">
       </div>
-      <div class="mb-3">
-        <label for="posicion" class="form-label">Posición:</label>
-        <input id="posicion" formControlName="posicion" type="text" class="form-control">
-        <div *ngIf="jugadorForm.controls['posicion'].invalid && jugadorForm.controls['posicion'].touched" class="text-danger">
-          La posición es obligatoria.
-        </div>
+      <p class="help is-danger" *ngIf="jugadorForm.controls['nombre'].invalid && jugadorForm.controls['nombre'].touched">
+        El nombre es obligatorio.
+      </p>
+    </div>
+    
+    <div class="field">
+      <label for="posicion" class="label">Posición:</label>
+      <div class="control">
+        <input class="input" id="posicion" formControlName="posicion" type="text" placeholder="Ingresa la posición">
       </div>
-      <!-- Se puede ocultar o mostrar el equipoId si es necesario -->
-      <button type="submit" class="btn btn-primary" [disabled]="jugadorForm.invalid">Crear Jugador</button>
-    </form>
-  </div>
-  
+      <p class="help is-danger" *ngIf="jugadorForm.controls['posicion'].invalid && jugadorForm.controls['posicion'].touched">
+        La posición es obligatoria.
+      </p>
+    </div>
+    
+    <!-- Se puede ocultar o mostrar el equipoId si es necesario -->
+    <div class="field">
+      <div class="control">
+        <button type="submit" class="button is-primary" [disabled]="jugadorForm.invalid">
+          Crear Jugador
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
